<resources>
    <string name="app_name">HelloWorld</string>
    <string name="add_view">+</string>
    <string name="btn_prefix">Button_%1$d</string>
    <string name="str_search">搜索</string>
    <string name="remove_view">-</string>
    <string name="str_text1">Text1</string>
    <string name="str_text2">Text2</string>
    <string name="str_text3">Text3</string>
    <string name="str_anim_1">动画1</string>
    <string name="str_anim_2">动画2</string>
    <string name="str_anim_3">动画3</string>
    <string name="str_rotate">旋转</string>
    <string name="str_toast">Toast</string>
    <string name="str_to_view_pager">toViewPager</string>
    <string name="title_activity_guideview">GuideViewActivity</string>
    <string name="to_main">Go to Main</string>
    <string name="to_third">Go to Third</string>
    <string name="str_change_color">Change Color</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
</resources>
