<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <LinearLayout
        android:id="@+id/first_line"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <HorizontalScrollView
            android:id="@+id/adaptive_view_scroll_view"
            android:scrollbars="none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/adaptive_view_container"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </LinearLayout>
        </HorizontalScrollView>
        <EditText
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="48dip"
            android:ems="6"
            android:hint="@string/str_search" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvTimer"
            android:text="00:00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/app_name"/>
        <RelativeLayout
            android:id="@+id/rl_text_view_container"
            android:layout_alignParentRight="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/ll_text_view_container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="15dip"
                android:duplicateParentState="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/ll_click_file">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/ptz_text_btn_rev_style"
                    android:text="@string/str_change_color"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:layout_toLeftOf="@id/ll_text_view_container"
                android:visibility="gone">
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_below="@id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/btn_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btn_add_view"
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/add_view"/>
                    <Button
                        android:id="@+id/btn_rm_view"
                        android:layout_width="0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/remove_view"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/tv_container"
                    android:layout_width="match_parent"
                    android:layout_height="48dip"
                    android:layout_below="@id/btn_container"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_margin="6dip"
                        android:text="@string/str_text1"
                        android:background="@color/colorGray"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                    <TextView
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_margin="6dip"
                        android:text="@string/str_text2"
                        android:background="@color/colorGray"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                    <TextView
                        android:layout_weight="3"
                        android:gravity="center"
                        android:layout_margin="6dip"
                        android:text="@string/str_text3"
                        android:background="@color/colorGray"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/anim_container"
                    android:layout_below="@id/tv_container"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="100dip"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btn_anim_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_anim_1"/>
                    <Button
                        android:id="@+id/btn_anim_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_anim_2"/>
                    <Button
                        android:id="@+id/btn_anim_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_anim_3"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_below="@id/anim_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btn_rotate"
                        android:layout_centerHorizontal="true"
                        android:text="@string/str_rotate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Button
                        android:id="@+id/btn_toast"
                        android:layout_centerHorizontal="true"
                        android:text="@string/str_toast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_to_view_pager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_to_view_pager"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
</merge>