<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_title"
        android:textSize="17sp"
        android:padding="20dp"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <NumberPicker
        android:layout_below="@id/tv_title"
        android:id="@+id/np_time"
        android:layout_centerHorizontal="true"
        android:descendantFocusability="blocksDescendants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_below="@id/np_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_positive"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_negative"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/btn_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>